<resources>
    <string name="app_name">TODO</string>
    <string name="title_toolbar">TODO</string>
    <string name="settings_toolbar">Settings</string>
    <string name="toolbar_new_task">New Task</string>
    <string name="toolbar_task">Task</string>
    <string name="title_task">Позавтракать</string>
    <string name="notes_task">Завтрак в 9:00, омлет с сыром</string>
    <string name="create_title_task">Title</string>
    <string name="create_notes_task">Notes(необязательно)</string>
    <string name="color_title">Color</string>
    <string name="general_title">General</string>
    <string name="saveTaskButton">Save</string>
    <string name="theme">Theme</string>
</resources>
